--- a/MauiAppLogin/login.xaml
+++ b/MauiAppLogin/login.xaml
@@ -3,10 +3,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppLogin.login"
              Title="login">
-    <VerticalStackLayout>
+    <VerticalStackLayout VerticalOptions="Center" Spacing="10" Padding="10">
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="Sistema de Login"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
+
+        <Label Text="Usuario"/>
+        <Entry x:Name="txt_usuario"/>
+        
+        <Label Text="senha"/>
+        <Entry x:Name="txt_senha" IsPassword="True"/>
+
+        <Button Text="Entrar" HorizontalOptions="Center"  Clicked="Button_Clicked"/>
     </VerticalStackLayout>
 </ContentPage>
