--- a/MauiAppLogin/protect.xaml
+++ b/MauiAppLogin/protect.xaml
@@ -3,10 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppLogin.protect"
              Title="protect">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    
+    <VerticalStackLayout VerticalOptions="Center" Padding="10" Spacing="10">
+        <Frame>
+            <VerticalStackLayout>
+                <Label Text="Área Protegida" FontSize="Large" HorizontalTextAlignment="Center" />
+                <Label x:Name="lbl_boasvindas" HorizontalOptions="Center"/>
+                <Button Text="Desconectar" HorizontalOptions="Center" Clicked="Button_Clicked"/>
+            </VerticalStackLayout>
+        </Frame>
     </VerticalStackLayout>
 </ContentPage>
